Fixed a small typo.

--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -35,7 +35,7 @@ For example:
 ==== Required Arguments ====
  # The reference file should be in FASTA format with the either the *.fasta*, *.fna*, or *.fa* file extension. For a transcriptome with multiple genes or isoforms as reference, concatenate all FASTA sequences in a single FASTA file. Alternatively, if there are many files, for example one per chromosome, ex: chr1.fa to chrY.fa, list the FASTA filenames one per line in a file which has the *.txt* extension. The *.txt* is important because PerM examines the file extension to know the input file is a list of filenames. The filenames need to include the file path (relative or absolute) unless the FASTA files are all in the same directory that PerM is run from.
  # The read file should be in the .fasta, .fastq, .csfasta or .csfastq format. PerM parses a file according to its extension, or the format explicitly specified by the *{{{--readFormat <format>}}}* flag. If there are multiple read files, list each file names in a .txt file, with each row a path of the reads file. PerM takes it as the input and can map multiple read sets in parallel by [http://en.wikipedia.org/wiki/OpenMP OpenMP].
- # The maximum number of mismatches reported ({{{-v}}} flag) can be set to 2 or more. For reads over 64 bp, PerM allows double the number of mismatches specified because reads longer than 64 bp are treated as two separate reads of half the length which must map to adjacent positions in the same direction on the reference, i.e. as a restricted case of the more general pair-end mapping.
+ # The maximum number of mismatches reported ({{{-v}}} flag) can be set to 2 or more. For reads over 64 bp, PerM allows double the number of mismatches specified because reads longer than 64 bp are treated as two separate reads of half the length which must map to adjacent positions in the same direction on the reference, i.e. as a restricted case of the more general paired-end mapping.
 
 ==== Short Options ====
 || *-A* || || Output all alignments within the mismatch threshold, end-to-end.||
