--- a/wiki/TestData.wiki
+++ b/wiki/TestData.wiki
@@ -1,13 +1,14 @@
 #labels Featured
-This page lists the data set used in the paper. PerM has been tested for many other public and private data sets. For more public data sets, check [http://www.ncbi.nlm.nih.gov/Traces/sra/sra.cgi? Short read archieve], [http://solidsoftwaretools.com/gf/project/ecoli2x50/ Applied Biosystem] or [ftp://ftp.illumina.com Illumina]. 
-=== Reference ===
-  * The anthracis.fasta file can be download from SOCS's webpage: [http://socs.biology.gatech.edu/Download.html SOCS ] 
-  * Repeat masked and non-masked human genomes can be downloaded from UCSC's genome browser. File names are chromFaMasked.zip and chromFa.zip: [http://hgdownload.cse.ucsc.edu/goldenPath/hg18/bigZips Human Genome from UCSC]. 
+This page lists the data sets used in the paper. PerM has been tested on many other public and private data sets. For more public data sets, check the [http://www.ncbi.nlm.nih.gov/Traces/sra/sra.cgi? NCBI Short read archive] and the [http://solidsoftwaretools.com/gf/project/ecoli2x50/ Applied Biosystems] or [ftp://ftp.illumina.com Illumina] websites.
+
+=== Reference Data Sets ===
+  * The anthracis.fasta file can be downloaded from [http://socs.biology.gatech.edu/Download.html SOCS download] page.
+  * Both repeat masked and non-masked human genomes can be downloaded from UCSC's genome browser. The file names are chromFaMasked.zip and chromFa.zip: [http://hgdownload.cse.ucsc.edu/goldenPath/hg18/bigZips Human Genome from UCSC]. 
 === Read files ===
-  * Illumina Test data used in the revision paper [http://www.ncbi.nlm.nih.gov/Traces/sra/sra.cgi?cmd=viewer&m=data&s=viewer&run=SRR001154 SRR001154]
+  * Illumina Test data used in the revised paper [http://www.ncbi.nlm.nih.gov/Traces/sra/sra.cgi?cmd=viewer&m=data&s=viewer&run=SRR001154 SRR001154]
   * SOLiD Read Test data used in the paper. [http://www.ncbi.nlm.nih.gov/Traces/sra/sra.cgi?cmd=viewer&m=data&s=viewer&run=ERR000455&search=&x=&y=&show_read=on&show_graph=on&space=color ERR00455]
 The data downloaded from the NCBI SRA is in the base format. We translated the data into 
-color signals in CSFASTA format. Because The data set is too large for many people to download, we provided the used proportion of data in our download section.   
-  * Real SOLiD reads from B anthracis can be downloaded from SOCS's page [http://socs.biology.gatech.edu/Download.html SOCS]. 
+color signals in CSFASTA format. Because the data set is too large for many people to download, we are provide the subset we used in our download section (ERR000455_5M.tgz).
+  * Real SOLiD reads from B. anthracis can be downloaded from [http://socs.biology.gatech.edu/Download.html SOCS's download page].
   * Simulated SOLiD or Solexa reads can be generated using the small program in the download section. 
 [http://code.google.com/p/perm/wiki/Manual Back to manual]
