--- a/wiki/Compiling.wiki
+++ b/wiki/Compiling.wiki
@@ -1,4 +1,4 @@
-#summary One-sentence summary of this page.
+#summary Compiling PerM for Windows,Linux and MacOS
 
 = Introduction =
 
@@ -6,11 +6,6 @@ Add your content here.
 
 
 = Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
 
 Precompiled executables are available for several platforms in the download section.
 
