--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -1,16 +1,4 @@
-#summary One-sentence summary of this page.
-
-= Introduction =
-
-Add your content here.
-
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+#summary Frequently Asked Questions
 
 Here are the answers to some technical questions that I have been asked about how to use PerM. Excuse me if I haven't been able to arrange all of them systematically.
 
