--- a/wiki/Limitations.wiki
+++ b/wiki/Limitations.wiki
@@ -1,4 +1,5 @@
-#summary One-sentence summary of this page.
+#summary Current Limitations of the PerM algorithm
+#labels Phase-Requirements
 
  * PerM doesn't support reads shorter than 25 base pairs for the F2 seed. It doesn't handle reads shorter than 13 bp for the F0 (exact match) seed.  
   * PerM doesn't support SOLiD reads with more than 64 base pairs.
