Edited wiki page FAQ through web user interface.

--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -1,4 +1,5 @@
 #summary Frequently Asked Questions
+#labels Featured
 
 Here are the answers to some technical questions that I have been asked about how to use PerM. Excuse me if I haven't been able to arrange all of them systematically.
 
