Edited wiki page Examples through web user interface.

--- a/wiki/Examples.wiki
+++ b/wiki/Examples.wiki
@@ -1,9 +1,4 @@
-#summary One-sentence summary of this page.
-
-= Introduction =
-
-Add your content here.
-
+#summary Single and Paired End Mapping Examples
 
 = Single End Mapping Examples =
 
