--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -5,9 +5,9 @@ If you have any usage questions, please email "yanghoch at usc dot edu".
 === [http://code.google.com/p/perm/wiki/Compiling Compiling] ===
 === [http://code.google.com/p/perm/wiki/Input Input Files]===
 === [http://code.google.com/p/perm/wiki/Output Output Files]===
-=== [http://code.google.com/p/perm/wiki/Limitation Limitations and Future work] ===
+=== [http://code.google.com/p/perm/wiki/Limitations Limitations and Future work] ===
 === [http://code.google.com/p/perm/wiki/Algorithms Algorithms ] ===
-=== [http://code.google.com/p/perm/wiki/QA Q & A ] ===
+=== [http://code.google.com/p/perm/wiki/FAQ FAQ ] ===
 == SYNOPSIS ==  
 To use the command line, type PerM with the args in the order.
 
