--- a/wiki/Examples.wiki
+++ b/wiki/Examples.wiki
@@ -29,7 +29,7 @@
 
 = Paired End Example = 
 
-====./PerM -1 F3.fq -2 R3.fq -L 200 -U 500 -e -A -v 5 -m -s -o out.sam ====
+====./PerM -1 F3.fq -2 R__3.fq -L 200 -U 500 -e -A -v 5 -m -s -o out.sam ====
 
     * Only paired mapping with separation distance of 200-500 bp will be output (-L and -U switches).
     * Read pairs with multiple qualified mapping locations won't be output (-e switch)
